# axiom-evi-extrae

./: .gitignore  README.md  configure.ac
config/: macros.m4  system.m4
debian/: .gitignore  control  extrae-dev.install.other  extrae-dev.install.x86  extrae.install.other  extrae.install.x86  rules
scripts/: aarch64-configure-axiom.sh  cross-configure-axiom.sh  x86-configure-axiom.sh
src/common/: events.c  events.h
src/merger/paraver/: misc_prv_events.c  misc_prv_events.h  misc_prv_semantics.c
src/others/: Makefile.am
src/tracer/wrappers/IO/: io_probe.c  io_probe.h  io_wrapper.c
tests/functional/merger/shared-libraries/: Makefile.am
